Made more small corrections.

--- a/templates/coach_resources/toolkit_content/instructional-strategies.html
+++ b/templates/coach_resources/toolkit_content/instructional-strategies.html
@@ -9,9 +9,9 @@ oefeningen maken en wat hun doelstellingen zijn. Hieronder ziet u een overzicht 
 informatie die u kunt opvragen.</h4>
 
 <h4>Het voortgangsoverzicht</h4>
-Het voortgangsoverzicht maakt het mogelijk direct te 
+Het voortgangsoverzicht zorgt ervoor dat je direct kan 
 zien hoe de klas presteert bij een bepaald onderwerp 
-en met welke onderdelen zij worstelen. Het 
+en met welke onderdelen ze worstelen. Het 
 filtersysteem maakt het mogelijk in te zoomen op een 
 bepaalde leerling.<br><br>
 <h4>Het dagelijkse activiteiten overzicht</h4>
@@ -37,7 +37,7 @@ gericht sturen waar u denkt dat dit nodig is.<br><br>
 <h4>Activiteiten overzicht</h4>
 Geeft inzicht in waar leerlingen gedurende een 
 bepaalde periode aan gewerkt hebben. 
-Prestaties
+<h4>Prestaties</h4>
 U kunt precies zien welke badges uw leerlingen hebben 
 behaald.</p>
 	
