--- a/templates/coach_resources/toolkit_content/toolkit-sections.html
+++ b/templates/coach_resources/toolkit_content/toolkit-sections.html
@@ -6,11 +6,11 @@
 	<hr>
 	<p class="lead">Hier volgt een korte beschrijving van de vijf onderdelen van deze toolkit</p>
 	<ul class="bullet">
-		<li><strong>Het kiezen voor KA:</strong> Begrijp de visie van de Khan Academie, kom erachter hoe jij Khan academie kunt gebruiken en ontdek welke middelen het meest relevant zijn voor jou.</li>
+		<li><strong>Het kiezen voor KA:</strong> Begrijp de visie van de Khan Academie, kom erachter hoe jij Khan Academie kunt gebruiken en ontdek welke middelen het meest relevant zijn voor jou.</li>
 		<li><strong>Aan de slag:</strong> Bepaal welke klassen Khan Academie kunnen gebruiken en ontdek hoe de site werkt.</li>
 		<li><strong>Klas tijd:</strong> Ontdek in welke leermethodes Khan Academie toegepast kan worden.</li>
 		<li><strong>Curriculum:</strong> Vind hier o.a. downloadbare werkbladen.</li>
-		<li><strong>Andere bronnen:</strong> Lees onze veelgestelde vragen of stel zelf een vraag. Of lees ons blog met het laatste nieuws en ervaringen van Nederlandse Khan Academie-gebruikers.</li>
+		<li><strong>Andere bronnen:</strong> Lees onze veelgestelde vragen of stel zelf een vraag. Of lees onze blog met het laatste nieuws en ervaringen van Nederlandse Khan Academie-gebruikers.</li>
 	</ul>
 	<p><a href="{{base_url}}/ka-classrooms" class="call-to-action simple-button green">Volgende: Waarom Khan Academie? →</a></p>
 	<p>
