--- a/templates/coach_resources/toolkit_content/using-data.html
+++ b/templates/coach_resources/toolkit_content/using-data.html
@@ -10,7 +10,7 @@
 	<h3>Voortgangsrapport</h3></p>
         <p class="has-media"><span class="toolkit-media"><a href="/images/toolkit/ProgressSummary2.jpg"><img width="100%" src="/images/toolkit/ProgressSummary.jpg"/></a></span>
 	<ul class="bullet"></p>
-		<li><strong>Tijdens de les:</strong> Gebruik de zoekfunctie om een specifieke oefening uit te lichten. Door gebruik te maken van de data kun je veel gerichter onderwijs geven. Mix leerlingen die bepaalde onderwerpen wel en niet machtig zijn of geef individuele uitleg aan leerlingen die dat nodig hebben.</li>
+		<li><strong>Tijdens de les:</strong> Gebruik de zoekfunctie om een specifieke oefening uit te lichten. Door gebruik te maken van de data kun je veel gerichter onderwijs geven. Mix leerlingen die bepaalde onderwerpen wel en niet onder de knie hebben of geef individuele uitleg aan leerlingen die dat nodig hebben.</li>
 		<li><strong>De dag of week van tevoren:</strong> Kijk of er bepaalde oefeningen zijn waar meerdere leerlingen moeite mee hebben en bereid lessen voor dit onderwerp voor (voor de hele klas of alleen voor deze leerlingen). Stel bijvoorbeeld ten doel in dat iedereen in de klas aan het eind van de week bepaalde opgaven onder de knie moet hebben.</li>
 	<li><strong>Een week vook de volgende les:</strong> Bekijk welke oefeningen er straks behandeld gaan worden. Bepaal aan de hand van de statistieken van de leerlingen welke studenten zich op welke onderwerpen gaan richten.</li>
 	</ul>
@@ -18,14 +18,14 @@
 	<h3>Dagelijks activiteiten verslag</h3>
         <p class="has-media"><span class="toolkit-media"><a href="/images/toolkit/DailyActivityReport.jpg"><img width="100%" src="/images/toolkit/DailyActivityReport2.jpg"/></a></span>
 	<ul class="bullet"></p>
-		<li><strong>Tijdens de les:</strong> Bekijk aan welke stof de klas aan het oefenen is en hoe snel dat gaat. Je kunt dit ook aan de klas zelf laten zien om ze te motiveren, of vergelijk de resultaten dagelijks met andere klassen.</li>
-		<li><strong>Deelneming/huiswerk:</strong> Je kunt bijvoorbeeld een tijd instellen die studenten aan Khan moeten besteden. Dit kan voor zowel video kijken als oefeningen maken gelden. Dit verslag geeft een globaal inzicht hoeveel er ook daadwerkelijk tijdens of na de les is gedaan.</li>
+		<li><strong>Tijdens de les:</strong> Bekijk welke stof de klas aan het oefenen is en hoe snel dat gaat. Je kunt dit ook aan de klas zelf laten zien om ze te motiveren, of vergelijk de resultaten dagelijks met andere klassen.</li>
+		<li><strong>Deelneming/huiswerk:</strong> Je kunt bijvoorbeeld een tijd instellen die leerlingen aan Khan moeten besteden. Dit kan voor zowel video kijken als oefeningen maken gelden. Dit verslag geeft een globaal inzicht hoeveel er ook daadwerkelijk tijdens of na de les is gedaan.</li>
 	</ul>
 	<br>
 	<h3>Doelen</h3>
         <p class="has-media"><span class="toolkit-media"><a href="/images/toolkit/Goals.jpg"><img width="100%" src="/images/toolkit/GoalsReport.jpg"/></a></span>
 	<ul class="bullet"></p>
-		<li><strong>Tijdens de les:</strong> Gebruik de filters om te zien welke leerlingen er moeite hebben om hun doelen te behalen. Richt je op die leerlingen door ze in een ander groepje te plaatsen, of richt je direct op deze leerling.</li>
+		<li><strong>Tijdens de les:</strong> Gebruik de filters om te zien welke leerlingen er moeite hebben om hun doelen te halen. Richt je op die leerlingen door ze in een ander groepje te plaatsen, of richt je direct op deze leerling.</li>
 		<li><strong>De dag of week van tevoren:</strong> Controleer of er bepaalde opgaven zijn waar groepjes of individuen moeite mee hebben. Aan de hand van de gestelde doelen en opgaven waar leerlingen het moeilijk mee hebben kun je ze samen laten werken.</li>
 		<li><strong>Weken van tevoren:</strong> Laat leerlingen zelf doelen bepalen, en kijk naderhand of ze ze ook behaald hebben.</li>
 	</ul>
