--- a/templates/coach_resources/view_demo.html
+++ b/templates/coach_resources/view_demo.html
@@ -9,12 +9,11 @@
     <div class="col2 fifty-fifty">
         <h2 class="main-headline" style="white-space: pre;">Demo</h2>
         <p>
-        Naast de content die de Khan Academie biedt met de video's en oefeningen, kan een coach ook nog een hoop informatie over zijn of haar klas en/of student(en) verkrijgen. De video links legt uit wat de mogelijkheden zijn.
+        Naast de content die de Khan Academie aanbiedt met de video's en oefeningen, kan een coach ook nog een hoop informatie over zijn of haar klas en/of student(en) verkrijgen. De videolink legt uit wat de mogelijkheden zijn.
         </p>
 
         <p>
-        Om dit zelf te ontdekken hebben we een manier ontwikkeld om informatie over je klas te krijgen door het scenario te simuleren. experience this first hand, we have created a way for you to access data for a
-        classroom setting by simulating the scenario. Sommige van ons hebben zich toegevoegd aan en klas, je krijgt toegang tot deze 
+        Om dit zelf te ontdekken hebben we een manier ontwikkeld om informatie over je klas te krijgen door het scenario te simuleren. Sommigen van ons hebben zich toegevoegd aan een klas en je krijgt toegang tot deze 
     	klas via<a href="/coach/accessdemo" target="_blank">
         demo</a>.
         <ul class=bullet>
