--- a/templates/contribute.html
+++ b/templates/contribute.html
@@ -61,12 +61,12 @@
                     <p>
                         Wij hebben de beschikking over veel Engelstalige oefeningen, deze worden ook op onze site
                         gebruikt.
-                        Maar alles moet wel worden vertaald van het Engels naar het Nederlands. Dit kost tijd en hier
+                        Maar alles moet wel vertaald worden van het Engels naar het Nederlands. Dit kost tijd en hier
                         kunnen
                         we jouw hulp goed bij gebruiken! </p>
 
                     <p>
-                        Op www.crowdin.net kun je ons helpen met vertalen. Hiervoor moet je de volgende stappen
+                        Op <a href="www.crowdin.net">www.crowdin.net</a> kun je ons helpen met vertalen. Hiervoor moet je de volgende stappen
                         doorlopen:
                     </p>
 
@@ -113,7 +113,7 @@
                     1. Een computer of tablet met internettoegang<br>
                     2. Een microfoon (vaak ingebouwd in een laptop)<br>
                     3. YouTube account (login kan met je Google account die je ook nodig hebt voor de Khan Academie)<br>
-                    We werken met de website www.screencast-o-matic.com. Zij bieden gratis software waarmee je filmpjes
+                    We werken met de website <a href="www.screencast-o-matic.com">www.screencast-o-matic.co</a>. Zij bieden gratis software waarmee je filmpjes
                     kunt maken van wat er op je beeldscherm gebeurt. Hierbij komt je eigen gezicht ook niet in beeld,
                     alleen je stem en de aantekeningen in het tekenprogramma Paint worden opgenomen.<br><br>
 
@@ -131,7 +131,7 @@
                     </object>
                     <br>
 
-                    Uiteindelijk kun je zelf de gemaakte filmpjes met de YouTube URL op video.khanacademie.nl uploaden.
+                    Uiteindelijk kun je zelf de gemaakte filmpjes met de YouTube URL op <a href="video.khanacademie.nl">video.khanacademie.nl</a> uploaden.
                     Je moet hier inloggen met je Google- of Facebookaccount. Nu staat je video klaar om beoordeeld te
                     worden door (andere) docenten van dit vakgebied.
                     Stuur voor de zekerheid nog een keer de link naar info@khanacademie.nl, zodat je zeker weet dat we
