--- a/templates/coach_resources/toolkit_content/how-to-use-this-toolkit.html
+++ b/templates/coach_resources/toolkit_content/how-to-use-this-toolkit.html
@@ -7,20 +7,20 @@
 		
 	<p class="lead">Als je Khan Academie in jouw klas of jouw school wilt gebruiken, staan onze middelen vrij tot je beschikking.</p> 
 	
-	<p>Khan Academie kan op diverse, creatieve manieren gebruikt worden. Wij horen heel graag hoe jouw gebruik jouw leerlingen helpt te leren. Wij willen in onze toolkit graag ervaringen van scholen en leraren verzamelen die met de Khan Academie op school werken. Hiermee kunnen anderen leraren en coaches inspiratie en ideeën opdoen over hoe zij zelf de Khan Academie in de klas kunnen gebruiken. Tot wij onze gereedschapskist kunnen vullen met ervaringen uit Nederland kun je lezen over Amerikaanse ervaringen op scholen met de Khan Academy. Wanneer jij methoden ontdekt die voor jou werken, horen wij daar graag over. Wij zijn er dan ook heel blij mee als je deze <a href="{{base_url}}/teacher-faqs"> toevoegt aan onze FAQs</a>!</p> 
+	<p>Khan Academie kan op verschillende, creatieve manieren gebruikt worden. Wij horen heel graag hoe jouw gebruik jouw leerlingen helpt te leren. Wij willen in onze toolkit graag ervaringen van scholen en leraren verzamelen die met de Khan Academie op school werken. Hiermee kunnen andere leraren en coaches inspiratie en ideeën opdoen over hoe zij zelf de Khan Academie in de klas kunnen gebruiken. Tot wij onze gereedschapskist kunnen vullen met ervaringen uit Nederland kun je lezen over Amerikaanse ervaringen op scholen met de Khan Academy. Wanneer jij methoden ontdekt die voor jou werken, horen wij daar graag over. Wij zijn er dan ook heel blij mee als je deze toevoegt aan onze <a href="{{base_url}}/teacher-faqs">FAQs</a>!</p> 
 
 	<p>Afhankelijk van hoe jij van plan bent de Khan Academie in jouw klas te gaan gebruiken, zullen verschillende delen van de toolkit voor jou nuttig zijn.</p>
 	
 
 	
 	
-	<p><strong>Geïndividualiseerde modellen:</strong> Gedurende de pilot, gebruiken sommige leraren de Khan Academie op een geïndividualiseerde manier. Dat wil zeggen dat leraren eigen lesmateriaal op de Khan Academie zullen plaatsen en hun leerlingen daarmee zullen laten werken. </p>
+	<p><strong>Geïndividualiseerde modellen:</strong> Gedurende de pilot gebruiken sommige leraren de Khan Academie op een geïndividualiseerde manier. Dat wil zeggen dat leraren eigen lesmateriaal op de Khan Academie zullen plaatsen en hun leerlingen daarmee zullen laten werken. </p>
 	<p><strong>Toekomstige modellen:</strong> We willen graag samenwerken met leraren die de uitdaging aan willen gaan om met vernieuwende methodes in het onderwijs aan de slag te gaan. De mogelijkheden zijn oneindig, maar onderwerpen die wij hopen terug te zien zijn ideeën over:</p>
 		<ul class="bullet"> 
 			<li>Gemengde (leeftijds)klassen</li>
-			<li>Leren op het eigen tempo, ook buiten de standaard groepsniveaus (i.e., Aangepast aan waar leerlingen behoefte aan hebben zouden zoals boven of onder het standaard niveau kunnen leren op het eigen tempo)</li>
+			<li>Leren op het eigen tempo, ook buiten de standaard groepsniveaus (oftewel, aangepast naar de behoeften van de leerlingen, zoals boven of onder het standaardniveau kunnen leren op het eigen tempo)</li>
 			<li>Betekenisvol gebruik van het oplossen van werkelijke wereldproblematiek en waardevol leren op projectbasis.</li>
-			<li>les geven door het combineren van disciplines</li>
+			<li>Les geven door het combineren van disciplines</li>
 		</ul>
 
 	<p>Wanneer je geïnteresseerd bent in het gebruik van de Khan Academie voor dergelijke doeleinden <a href="https://docs.google.com/a/khanacademie.nl/spreadsheet/viewform?formkey=dFZYRWdsSnJYakF4a1dyYm92UUh3dmc6MQ#gid=0"> meld je dan hier aan</a>.</p>
