--- a/templates/nl-content/about.html
+++ b/templates/nl-content/about.html
@@ -68,7 +68,7 @@
 						Het doel van de Khan Academie is het onderwijs wereldwijd te verbeteren door het verstrekken van gratis onderwijs aan iedereen, overal. 
 					</p>
 					<p>
-						Al het materiaal op de site is voor iedereen beschikbaar of je nu student bent, of leraar of thuisstudent, of schoolleider  of een tweedekanser die na twintig jaar weer naar school wil, of een vriendelijk buitenaards wezen dat op deze manier voet aan de grond probeert te krijgen op aarde. 
+						Al het materiaal op de site is voor iedereen beschikbaar of je nu student, leraar, thuisstudent, schoolleider of een tweedekanser bent, die na twintig jaar weer naar school wil, of een vriendelijk buitenaards wezen dat op deze manier voet aan de grond probeert te krijgen op aarde. 
 						Al het materiaal van de Khan Academie en alle hulpmiddelen die wij hebben zijn kosteloos beschikbaar voor iedereen.
 					</p>
 			</div>
@@ -82,7 +82,7 @@
 
 			<div class="col2 sixty-forty" >
 				<h2>Hoe werkt Khan voor studenten?</h2>
-				<p>Studenten kunnen op elke computer, op tablet en i-phone gebruik maken van onze uitgebreide collectie video's, oefeningen en persoonlijke rapportages. Wel is een aansluiting op het Internet vereist.</p>
+				<p>Studenten kunnen op elke computer, op tablet en iPhone gebruik maken van onze uitgebreide collectie video's, oefeningen en persoonlijke rapportages. Wel is een aansluiting op het Internet vereist.</p>
 				<ol>
 					<li>{{ youtube.jump_link("Een leerinstrument volledig op maat.", 0) }}</li>
 					<li>{{ youtube.jump_link("Een dynamische hulpsysteem.", 130) }}</li>
@@ -126,7 +126,7 @@
 					<h2>Een enorme hoeveelheid oefeningen, met ondersteuning op elk gewenst moment</h2>
 					<p class="justify">
 					<a href="/exercisedashboard">Oefen wiskunde in je eigen tempo</a> met oefeningen die op je eigen leerstijl zijn afgestemd.
-					Je kunt <strong>beginnen met 1 plus 1 en van daaruit verder gaan met rekenen</strong> of aan de slag gaan met elk ander onderwerp waarvan de kennis is weggezakt.<br/><br/>
+					Je kunt <strong>beginnen met 1 plus 1</strong> en van daaruit verder gaan met rekenen of aan de slag gaan met elk ander onderwerp waarvan de kennis is weggezakt.<br/><br/>
 					Er is geen vaste volgorde in oefeningen of sommen. Ze worden willekeurig aangeleverd zodat ze steeds weer nieuw zijn en je nooit zonder oefenmateriaal zit. <strong>Als je een aanwijzing nodig hebt, kan een probleem met een eenvoudige klik op de "hint" knop worden opgedeeld in stukjes.</strong> Als je meer hulp nodig hebt, kun je altijd naar een andere video kijken die met het onderwerp te maken heeft.
 					</p>
 				</div>
@@ -136,7 +136,7 @@
 				<div class="col1 sixty-forty right">
 					<h2>Actuele volgsystemen</h2>
 					<p class="justify">
-					De Khan Academy houdt precies bij wat je doet en wat je vorderingen zijn, op elk moment dat je achter je computer zit. Al deze gegevens zijn persoonlijk en worden als zodanig behandeld, maar er zijn heldere overzichten beschikbaar voor elke gebruiker en zijn begeleider. Zodra je erom vraagt, krijg je <strong>ogenblikkelijk informatie over alles wat je hebt geleerd</strong> en de resultaten die je hebt behaald.</br></br>
+					De Khan Academie houdt precies bij wat je doet en wat je vorderingen zijn, op elk moment dat je achter je computer zit. Al deze gegevens zijn persoonlijk en worden als zodanig behandeld, maar er zijn heldere overzichten beschikbaar voor elke gebruiker en zijn begeleider. Zodra je erom vraagt, krijg je <strong>ogenblikkelijk informatie over alles wat je hebt geleerd</strong> en de resultaten die je hebt behaald.</br></br>
 					Je kunt alle informatie krijgen die je maar wilt over het totaal van je activiteiten tot en met elke oefening die je ooit hebt gemaakt. Je vindt <strong>harde gegevens over de toename in je kennis</strong> van bijvoorbeeld wiskunde.
 					</p>
 				</div>
