--- a/templates/nl-content/contribute.html
+++ b/templates/nl-content/contribute.html
@@ -64,7 +64,7 @@
 		<h2>Vertalen</h2>
 		<p>
 			Tijdens dit project komen wij engelse termen en woorden tegen waarvan wij niet weten wat de juiste vertaling is.</br>
-			In <a href="https://docs.google.com/a/perceptum.nl/spreadsheet/ccc?key=0AvDEGvPnvBfDdFlwMzFLR09jbThfTHVIZFFEaTRFZGc#gid=0">dit sheet</a> vindt je alle te vertalen termen, titels en namen. Ze zijn verdeeld over verschillende tabbladen.
+			In <a href="https://docs.google.com/a/perceptum.nl/spreadsheet/ccc?key=0AvDEGvPnvBfDdFlwMzFLR09jbThfTHVIZFFEaTRFZGc#gid=0">dit sheet</a> vind je alle te vertalen termen, titels en namen. Ze zijn verdeeld over verschillende tabbladen.
 			Iedereen kan zijn of haar vertalingen invoeren in het sheet, wees dus voorzichtig met het wijzigen.</br>Staat er al een vertaling maar weet je een betere? Plaats deze dan in de kolom er naast.
 			<div><iframe width='485' height='600' frameborder='0' src='https://docs.google.com/spreadsheet/pub?key=0AvDEGvPnvBfDdEhMUXpzR0dVMTBSc3ExQmVrMHpCSmc&single=true&gid=3&output=html&widget=true'></iframe></div>
 		</p>
