--- a/templates/nl-content/credits.html
+++ b/templates/nl-content/credits.html
@@ -46,7 +46,7 @@
 {% endblock pagescript %}
 {% block pagesubmenu %}
     <span class="breadcrumbs_nav">
-        <a href="/nl-content/about.html" id="the-site">De Site</a>
+        <a href="/nl-content/about.html" id="the-site">De site</a>
         <!-- class="selected"> Selected -->
         <a href="/nl-content/gettingstarted.html" id="getting-started">Aan de slag!</a>
         <a href="/nl-content/faq.html" id="faq">FAQ</a>
