--- a/templates/nl-content/faq.html
+++ b/templates/nl-content/faq.html
@@ -52,7 +52,7 @@
 {% endblock pagescript %}
 {% block pagesubmenu %}
     <span class="breadcrumbs_nav">
-        <a href="/nl-content/about.html" id="the-site">De Site</a>
+        <a href="/nl-content/about.html" id="the-site">De site</a>
         <!-- class="selected"> Selected -->
         <a href="/nl-content/gettingstarted.html" id="getting-started">Aan de slag!</a>
         <a href="/nl-content/faq.html" id="faq" class="selected">FAQ</a>
@@ -68,7 +68,7 @@
 
                 <div id="faq-nav-wrapper">
                     <div id="faq-nav" class="col1 forty-sixty vertical-shadow visited-no-recolor">
-                        <h2 class="pulls">Frequently Asked Questions</h2>
+                        <h2 class="pulls">Veelgestelde vragen</h2>
 
                         <p id="wp1" style="margin-top: 9px;">
                             <em></em>
@@ -150,7 +150,7 @@
                         helemaal kwijt waren. Met deze video's laat ik zien hoe die concepten eigenlijk uitgelegd hadden
                         moeten worden, zonder daarbij concessies te doen aan de kern van de stof of de volledigheid.
                     </p>
-                    <!--<a name="werkt"><h2>Hoe weet je dat de de Khan Academie werkt?</h2></a>
+                    <!--<a name="werkt"><h2>Hoe weet je dat de Khan Academie werkt?</h2></a>
                     <p>
                         <img class="rounded-background" style="float:right;margin-left:20px;margin-bottom:10px;width:350px;" src="/images/attention.GIF">
                         <img class="rounded-background" style="float:right;clear:both;margin-left:20px;;width:350px;" src="/images/averagechart.GIF">
@@ -162,7 +162,7 @@
                         </br></br>
                         No teacher has ever done me any good--this may sound harsh but I mean it quite literally. I was force fed medication to keep me from talking and chastised for not speaking out when called on. Where I am from blacks are not welcomed with open arms into schools--my mother and her sisters had to go to a small shack two hours from home when they went to school. About five years ago my family collected enough money to move from where i was born, so that I could have a chance at having an education and living a real life. But without a real mastery of elementary math I was slow to progress.
                         </br></br>
-                        I am now in college and learning more than I ever have in my life. But an inadequate math background has been holding me back. I found the Kahn Academy in June of 2009, right after I completed Math 141 ( a college algebra course). I have spent the entire summer on your youtube page. And I just wanted to thank you for everything you are doing. You are a Godsend. Last week I tested for a math placement exam and I am now in Honors Math 200. No question was answered incorrectly. My placement test holder was so impressed by the breadth of my knowledge of math that he said I should be in Linear algebra. </br></br>
+                        I am now in college and learning more than I ever have in my life. But an inadequate math background has been holding me back. I found the Khan Academy in June of 2009, right after I completed Math 141 ( a college algebra course). I have spent the entire summer on your youtube page. And I just wanted to thank you for everything you are doing. You are a Godsend. Last week I tested for a math placement exam and I am now in Honors Math 200. No question was answered incorrectly. My placement test holder was so impressed by the breadth of my knowledge of math that he said I should be in Linear algebra. </br></br>
                         Mr. Khan, I can say without any doubt that you have changed my life and the lives of everyone in my family. </br></br>
                         I wish you and the Khan Academy the best of luck.</blockquote>
                     </p>
