--- a/templates/nl-content/gettingstarted.html
+++ b/templates/nl-content/gettingstarted.html
@@ -46,7 +46,7 @@
 {% endblock pagescript %}
 {% block pagesubmenu %}
     <span class="breadcrumbs_nav">
-        <a href="/nl-content/about.html" id="the-site">De Site</a>
+        <a href="/nl-content/about.html" id="the-site">De site</a>
         <!-- class="selected"> Selected -->
         <a href="/nl-content/gettingstarted.html" id="getting-started" class="selected">Aan de slag!</a>
         <a href="/nl-content/faq.html" id="faq">FAQ</a>
@@ -83,7 +83,7 @@
         <img src="/images/exercise-dashboard-medium.png" height="250" width="320" class="rounded-background">
     </a>
     <p>
-        Iedereen kan de site gratis gebruiken. Gebruik je Google account om <a href="/login">in te loggen</a> (in een latere fase hopen we Facebook login toe te voegen). 
+        Iedereen kan de site gratis gebruiken. Gebruik je Google- of Facebookaccount om <a href="/login">in te loggen</a>. 
 		Door in te loggen kun je je voortgang zien en punten en badges verdienen.
     </p>
     <p>
@@ -103,15 +103,15 @@
         Zodra je bent ingelogd op de Khan Academie, kun je je door leerlingen laten toevoegen als coach.
     </p>
     <p>
-        Volgende stap: je leerlingen hebben ook een account nodig. Leerlingen ouder dan 13 jaar kunnen zelf een Google account aanvragen. Is een leerling nog geen 13 jaar, dan heb je twee opties: 
-        <ul>
-			<li style="font-size:14px;margin-left:23px;">1. zorg dat de leerlingen samen met hu ouders een <a href="https://www.google.com/accounts/NewAccount">Google account</a> aanvragen</li>
-			<li style="font-size:14px;margin-left:23px;">2. vraag voor de hele school <a href="http://www.google.com/apps/intl/en/edu/">Google Apps for Education</a> aan.</li>
-		</ul>
+        Volgende stap: je leerlingen hebben ook een account nodig. Leerlingen ouder dan 13 jaar kunnen zelf een Google-account aanvragen. Is een leerling nog geen 13 jaar, dan heb je twee opties: 
+        <ol>
+			<li style="font-size:14px;margin-left:23px;">Zorg dat de leerlingen samen met hun ouders een <a href="https://www.google.com/accounts/NewAccount">Google-account</a> aanvragen</li>
+			<li style="font-size:14px;margin-left:23px;">Vraag voor de hele school <a href="http://www.google.com/apps/intl/en/edu/">Google Apps for Education</a> aan.</li>
+		</ol>
     </p>
     <a name="schools"><h2>Ik wil graag een pilot doen op onze school, kan dat?</h2></a>
     <p>
-        Allereerst hartelijk dank voor de interesse in de Khan Academie. We zijn momenteel al bezig met een aantal pilot-projecten, maar zijn erg benieuwd naar meer ervaringen "in het veld". Gebruik onderstaand formulier om aan te melden voor een pilot en we nemen contact op.
+        Allereerst hartelijk dank voor de interesse in de Khan Academie. We zijn momenteel al bezig met een aantal pilot-projecten, maar zijn erg benieuwd naar meer ervaringen "in het veld". Gebruik onderstaand formulier om je aan te melden voor een pilot en we nemen contact op.
     </p>
 <div id="googleformiframe">
 <iframe src="https://docs.google.com/a/perceptum.nl/spreadsheet/embeddedform?formkey=dFZYRWdsSnJYakF4a1dyYm92UUh3dmc6MQ" width="500" height="1027" frameborder="0" marginheight="0" marginwidth="0">Bezig met laden...</iframe>
