--- a/templates/nl-content/videos.html
+++ b/templates/nl-content/videos.html
@@ -28,11 +28,11 @@
 			Het is handig om een tekentablet te hebben, zelf gebruik ik een Wacom Bamboo (ongeveer &euro;80,- gekost). Een andere mogelijkheid is om het digitale schoolbord te gebruiken, zorg dan wel voor een goede microfoon. Verder gebruik ik een Logitech headset, geluid is niet super, maar voorlopig goed genoeg.
 			</p>
 			<p>
-			Als recording software gebruik ik <a href="http://screencast-o-matic.com">screencast-o-matic</a>. De gratis versie toont bij de opnames een logo van screencast-o-matic, met een licentie van $12,- per jaar heb je dat niet. Ander voordeel van de Pro-editie is dat je makkelijker opnames naar YouTube kunt sturen, je hoeft niet te wachten tot de upload klaar is om weer een nieuwe opname te maken.
+			Als opnamesoftware gebruik ik <a href="http://screencast-o-matic.com">screencast-o-matic</a>. De gratis versie toont bij de opnames een logo van screencast-o-matic, met een licentie van $12,- per jaar heb je dat niet. Ander voordeel van de Pro-editie is dat je makkelijker opnames naar YouTube kunt sturen, je hoeft niet te wachten tot de upload klaar is om weer een nieuwe opname te maken.
 			</p>
 			<h4>Is het moeilijk?</h4>
 			<p>
-			Nee, het is niet moeilijk, maar de meeste mensen (waaronder ikzelf)  vinden het maken en publiceren van het eerste filmpje erg lastig. Het horen van je eigen stem, angst dat niemand zit te wachten op jouw uitleg, het draagt niet bij aan de laagdrempeligheid van het maken van filmpjes. 
+			Nee, het is niet moeilijk, maar de meeste mensen (waaronder ikzelf) vinden het maken en publiceren van het eerste filmpje erg lastig. Het horen van je eigen stem, angst dat niemand zit te wachten op jouw uitleg, het draagt niet bij aan de laagdrempeligheid van het maken van filmpjes. 
 			Oplossing? Gewoon doen!
 			</p>
 			<h4>Wat ook helpt?</h4> 
