--- a/templates/viewbadges.html
+++ b/templates/viewbadges.html
@@ -90,7 +90,7 @@
 {% endif %}
 
 {% if user_badges_normal %}
-    <h3 class="fancy-heading"><span>Jouw Badges</span></h3>
+    <h3 class="fancy-heading"><span>Jouw badges</span></h3>
     <div class="clear">&nbsp;</div>
     <div class="centered-badge-container">
     {% for user_badge in user_badges_normal %}
