--- a/templates/voorleraren.html
+++ b/templates/voorleraren.html
@@ -57,7 +57,7 @@ img {
           </p>
         <h3>Coach Worden</h3>
           <p>
-            Leerlingen moeten jou eerst al coach toevoegen voordat je de ontwikkelingen van de leerling kunt volgen. Laat de leerlingen de volgende stappen doorlopen:
+            Leerlingen moeten jou eerst als coach toevoegen voordat je de ontwikkelingen van de leerling kunt volgen. Laat de leerlingen de volgende stappen doorlopen:
 
             <ol>Optie 1:
                 <li>Log in op Khan Academie met je eigen account</li>
@@ -151,7 +151,7 @@ img {
             Ook dit proces is op onze wiki te volgen. 
             Hier staan alle oefeningen aangegeven die op den duur op de site komen. 
             Heb je ideeën over hoe je deze kunt toetsen of ken je soortgelijke oefeningen. 
-            Plaats ze dan in onze wiki op wiki.khanacademie.nl. 
+            Plaats ze dan in <a href="wiki.khanacademie.nl">onze wiki op wiki.khanacademie.nl</a>. 
             Op ons <a href="http://blog.khanacademie.nl//search/label/Khan%20in%20de%20klas">blog</a> kun je lezen over de gebruikerservaring van een leraar die Khan in de klas gebruikt. 
           </p>
         <!-- <h3></h3><p></p> -->
