--- a/templates/reportissue_template.html
+++ b/templates/reportissue_template.html
@@ -40,7 +40,7 @@ function submitForm(value)
         <input type="submit" text="Submit"></input>
         </form>
 
-        <p>Bedankt voor melden van jouw probleem!
+        <p>Bedankt voor melden van het probleem!
         <p>
         Wanneer wij denken dat we het probleem hebben opgelost zul je een e-mail ontvangen en je zult zelf het verschil zien
         bij de volgende keer dat we de site upgraden.  
