--- a/templates/voorleraren.html
+++ b/templates/voorleraren.html
@@ -55,7 +55,7 @@ img {
             Een geautoriseerde Google Apps reseller kan helpen met de implementatie van Google Apps. 
             Neem contact op met <a href="http://www.perceptum.nl/">Perceptum</a> voor meer informatie. 
           </p>
-        <h3>Coach Worden</h3>
+        <h3>Coach worden</h3>
           <p>
             Leerlingen moeten jou eerst als coach toevoegen voordat je de ontwikkelingen van de leerling kunt volgen. Laat de leerlingen de volgende stappen doorlopen:
 
