New name message!

--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -191,6 +191,15 @@
             Ok
         </button>
     </div>
+    <style>
+    	#nieuw-naam {
+    		background-color: #459F6F;
+    		text-align: center;
+    		color: white;
+    		padding: 5px 0px;
+    	}
+    </style>
+    <div id="nieuw-naam">Dankzij jullie stemmen hebben we een nieuwe naam: Ik Tel! We zijn druk bezig de site en social media te veranderen =)</div>
     <div id="page-container">
         <div id="page-container-inner">
             {# Facebook connect root #}
